<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter name</string>
    <string name="mobile">Mobile Number</string>
    <string name="group_size">Group Size</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time</string>
    <string name="smoking">Smoking Area</string>


</resources>
